I think I fixed the jumpy title issue in safari

--- a/sources/subpages/subpage.css
+++ b/sources/subpages/subpage.css
@@ -93,8 +93,7 @@ img{
     font-size: 3rem;
     line-height: 3rem;
     position: fixed;
-
-    overflow: visible;
+    top: 3rem;
 }
 
 #sub-title{
